# flash-cardc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: db.h  gui_custom.h  learn_engine.h  pages.h
src/: main.cpp
